--- a/index.html
+++ b/index.html
@@ -13,4 +13,6 @@ title: 我的Blog
 </ul>
 
 
-<a href="1ch_1.html">abc</a>
+<a href="1ch_1.html">1ch_1.html</a>
+<br/>
+<a href="1ch_2.html">1ch_2.html</a>
