--- a/contact.html
+++ b/contact.html
@@ -18,20 +18,20 @@ GAE(micolog) --> WordPress --> Jekyll</p>
 
 <p>who involved in</p>
 
-<blockquote><p><i class="fa fa-github"></i><a href="https://github.com/Treri">GitHub</a></p>
+<blockquote><p><i class="fa fa-github"></i><a href="https://github.com/baoguoding">GitHub</a></p>
 
-<p><a href="http://www.douban.com/people/lwent/">douban</a></p>
+<p><a href="http://www.douban.com/people/baoguoding/">douban</a></p>
 
-<p><i class="fa fa-qq"></i>QQ: 83692901</p></blockquote>
+<p><i class="fa fa-qq"></i>QQ: 8334279</p></blockquote>
 
 <p>mail</p>
 
-<blockquote><p><i class="fa fa-envelope"></i> treri.liu@gmail.com</p></blockquote>
+<blockquote><p><i class="fa fa-envelope"></i> baoguo.ding@gmail.com</p></blockquote>
 
 <p>or follow</p>
 
-<blockquote><p><i class="fa fa-twitter"></i> <a href="https://twitter.com/treri_liu">@Treri</a></p>
+<blockquote><p><i class="fa fa-twitter"></i> <a href="https://twitter.com/baoguoding">@Treri</a></p>
 
-<p><i class="fa fa-weibo"></i> <a href="http://weibo.com/leftupme">@Treri</a></p></blockquote>
+<p><i class="fa fa-weibo"></i> <a href="http://weibo.com/1751985325">@baoguoding</a></p></blockquote>
 
 <p>to reach me</p>
