--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,8 @@ comments: true
 
 <h3>Blog</h3>
 
-<p>From 2011-03-24 to now<br/>
-GAE(micolog) --> WordPress --> Jekyll</p>
+<p>From 2007-04-18 to now<br/>
+博客园 --> GAE(micolog) --> WordPress --> Jekyll</p>
 
 <h3>Treri</h3>
 
@@ -30,8 +30,8 @@ GAE(micolog) --> WordPress --> Jekyll</p>
 
 <p>or follow</p>
 
-<blockquote><p><i class="fa fa-twitter"></i> <a href="https://twitter.com/baoguoding">@Treri</a></p>
+<blockquote><p><i class="fa fa-twitter"></i> <a href="https://twitter.com/baoguoding">@保国丁</a></p>
 
-<p><i class="fa fa-weibo"></i> <a href="http://weibo.com/1751985325">@baoguoding</a></p></blockquote>
+<p><i class="fa fa-weibo"></i> <a href="http://weibo.com/1751985325">@丁帅爸爸</a></p></blockquote>
 
 <p>to reach me</p>
