--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@ comments: true
 <p>From 2007-04-18 to now<br/>
 博客园 --> GAE(micolog) --> WordPress --> Jekyll</p>
 
-<h3>Treri</h3>
+<h3>Paul Ding</h3>
 
 <p>a</p>
 
@@ -30,7 +30,7 @@ comments: true
 
 <p>or follow</p>
 
-<blockquote><p><i class="fa fa-twitter"></i> <a href="https://twitter.com/baoguoding">@保国丁</a></p>
+<blockquote><p><i class="fa fa-twitter"></i> <a href="https://twitter.com/baoguoding">@Paul Ding</a></p>
 
 <p><i class="fa fa-weibo"></i> <a href="http://weibo.com/1751985325">@丁帅爸爸</a></p></blockquote>
 
