--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,9 @@ comments: true
 
 <p>mail</p>
 
-<blockquote><p><i class="fa fa-envelope"></i> baoguo.ding@gmail.com</p></blockquote>
+<blockquote><p><i class="fa fa-envelope"></i> baoguo.ding#gmail.com</p>
+<p><i class="fa fa-envelope"></i> baoguo.ding#foxmail.com</p>
+</blockquote>
 
 <p>or follow</p>
 
