--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,6 @@
 ---
 layout: page
 title: 关于我
-pid: 7
 comments: true
 ---
 
@@ -14,7 +13,7 @@ comments: true
 
 <p>a</p>
 
-<blockquote><p>Front ender | Linuxer | Macer | Googler | Coder</p></blockquote>
+<blockquote><p>Full Stack Developer | Linuxer | Macer | Googler | Coder</p></blockquote>
 
 <p>who involved in</p>
 
