--- a/contact.html
+++ b/contact.html
@@ -33,6 +33,6 @@ comments: true
 
 <blockquote><p><i class="fa fa-twitter"></i> <a href="https://twitter.com/baoguoding">@Paul Ding</a></p>
 
-<p><i class="fa fa-weibo"></i> <a href="http://weibo.com/1751985325">@丁帅爸爸</a></p></blockquote>
+<p><i class="fa fa-weibo"></i> <a href="http://weibo.com/baoguoding">@丁帅爸爸</a></p></blockquote>
 
 <p>to reach me</p>
