--- a/contact.html
+++ b/contact.html
@@ -31,8 +31,8 @@ comments: true
 
 <p>or follow</p>
 
-<blockquote><p><i class="fa fa-twitter"></i> <a href="https://twitter.com/baoguoding">@Paul Ding</a></p>
+<blockquote><p><i class="fa fa-twitter"></i> <a href="https://twitter.com/baoguoding">@baoguoding</a></p>
 
-<p><i class="fa fa-weibo"></i> <a href="http://weibo.com/baoguoding">@丁帅爸爸</a></p></blockquote>
+<p><i class="fa fa-weibo"></i> <a href="http://weibo.com/baoguoding">@baoguoding</a></p></blockquote>
 
 <p>to reach me</p>
